sc_phys_shield_item

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -16219,10 +16219,10 @@ item_db: (
 		callfunc("SC_Bonus", 60, SC_PLUSATTACKPOWER, 50);
 		callfunc("SC_Bonus", 60, SC_ATTHASTE_POTION1, 45);
 		//callfunc("SC_Bonus", 60, SC_PHYS_SHIELD, 40); //@EVOL2
-		//callfunc("SC_Bonus", 60000, SC_PHYS_SHIELD, 40); //@TMWA
+		//callfunc("SC_Bonus", 60000, SC_PHYS_SHIELD_ITEM, 40); //@TMWA
+		//sc_end SC_PHYS_SHIELD; //@TMWA
 		//misceffect FX_MAGIC_SHIELD, strcharinfo(0); //@TMWA
 	">
-	// TODO: betsanc of Crazy Rum can be chanceled with detsanc so add SC_PHYS_SHIELD_ITEM to prevent this
 },
 {
 	Id: 5309
