Added trade option for Enchanter's Amulet, added +1 int to Scarab Armlet, Made Magic Ring a shield item with a min dex of 20 required and made amulet 1 in 3 chances(from 1 in 4) again at the swamp chest.

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1810,9 +1810,12 @@ item_db: (
 	Weight: 3
 	Def: 0
 	Slots: 0
-	Loc: "EQP_ACC_R"
+	Loc: "EQP_HAND_L"
 	Refine: false
 	ViewSprite: 5253
+        OnEquipScript: <"
+		callfunc "RequireStat", bDex, 20, EQI_HAND_L;
+	">
 	Script: <"
 		bonus bInt, 1;
 	">
@@ -18070,6 +18073,7 @@ item_db: (
 	Refine: false
 	ViewSprite: 585
 	Script: <"
+		bonus bInt, 1;
 		bonus bMatkRate, 5; // @EVOL2
 	">
 },
