Removed Magic Ring changes and applied HoraK's default confirm choice ssuggestion.

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1810,12 +1810,10 @@ item_db: (
 	Weight: 3
 	Def: 0
 	Slots: 0
-	Loc: "EQP_HAND_L"
+	Loc: "EQP_ACC_R"
 	Refine: false
 	ViewSprite: 5253
         OnEquipScript: <"
-		callfunc "RequireStat", bDex, 20, EQI_HAND_L;
-	">
 	Script: <"
 		bonus bInt, 1;
 	">
