Makes Long Sword attainable

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -821,20 +821,28 @@ item_db: (
 	AegisName: "LongSword"
 	Name: "LongSword"
 	Type: "IT_WEAPON"
-	Buy: 1000
-	Sell: 500
+	Buy: 20000
+	Sell: 10000
 	Weight: 1300
-	Atk: 150
+	Atk: 149
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
-	WeaponLv: 1
+	WeaponLv: 2
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 1
 	Subtype: "W_1HSWORD"
+        OnEquipScript: <"
+		callfunc "RequireStat", bStr, 31, EQI_HAND_R;
+                callfunc "RequireStat", bVit, 67, EQI_HAND_R;
+		callfunc "RequireStat", bDex, 59, EQI_HAND_R;
+                callfunc "RequireStat", bLuk, 61, EQI_HAND_R;
+	">
 	Script: <"
-		callfunc "UnreleasedItem", EQI_HAND_R;
+		bonus bBaseWeaponDelayAdjust, -11; // @TMWA
+                bonus bPerfectHitRate, 11;
+                bonus bPerfectHitAddRate, 7;
 	">
 },
 {
