Magic Ring reqs and Mana Pearl fix
- added 80 int as req to magic ring
- added min lvl 80 to ring like led suggested
- added a magic experience check to it with same magic experience needed as manapearl, should it have more, same or less? for more there would be no azibit message
- mana pearl stats changed without anyone doing something and equip script was gone so i re-added this and made stats i remember (how and why this sudden item changes happen? saw some others where this happened as well)
- changed internal name of Magic Ring from MageRing to MagicRing

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1811,8 +1811,8 @@ item_db: (
 },
 {
 	Id: 5253
-	AegisName: "MageRing"
-	Name: "MageRing"
+	AegisName: "MagicRing"
+	Name: "MagicRing"
 	Type: "IT_ARMOR"
 	Buy: 0
 	Sell: 0
@@ -1820,9 +1820,14 @@ item_db: (
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
+	EquipLv: 80
 	Refine: false
 	ViewSprite: 5253
+	OnEquipScript: <"
+		callfunc "RequireStat", bInt, 80, EQI_ACC_R;
+	">
 	Script: <"
+		callfunc "MagicRingItem", EQI_ACC_R;
 		bonus bInt, 1;
 	">
 },
@@ -1831,9 +1836,9 @@ item_db: (
 	AegisName: "ManaPearl"
 	Name: "Mana Pearl"
 	Type: "IT_ARMOR"
-	Buy: 1000
-	Sell: 1
-	Weight: 3
+	Buy: 0
+	Sell: 0
+	Weight: 0
 	Matk: 22
 	Def: 0
 	Slots: 0
@@ -1841,6 +1846,7 @@ item_db: (
 	Refine: false
 	ViewSprite: 5272
 	Script: <"
+		callfunc "ManaPearlItem", EQI_ARMOR;
 		bonus bInt, 1;
 		bonus bMatkRate, 22; // @EVOL2
 		bonus bMaxSP, 55;
