--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -59,6 +59,7 @@ npc: npc/items/drugs.txt
 npc: npc/items/max_stat.txt
 npc: npc/items/nobow_item.txt
 npc: npc/items/love_potion.txt
+npc: npc/items/magicring_item.txt
 npc: npc/items/manapearl_item.txt
 npc: npc/items/underworld_troll.txt
 npc: npc/items/silver_bell.txt
