--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -2382,7 +2382,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 20
 	Sell: 10
-	Weight: 1
+	Weight: 5
 	Def: 0
 	Refine: false
 	ViewSprite: 540
@@ -5674,6 +5674,7 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	}
+	//Disabled: true // @TMWA
 },
 {
 	Id: 5360
@@ -5792,6 +5793,7 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	}
+	//Disabled: true // @TMWA
 },
 {
 	Id: 5371
@@ -5811,6 +5813,7 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	}
+	//Disabled: true // @TMWA
 },
 {
 	Id: 5372
@@ -5830,6 +5833,7 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	}
+	//Disabled: true // @TMWA
 },
 {
 	Id: 5375
@@ -5918,6 +5922,72 @@ item_db: (
 	Weight: 20
 	Refine: false
 	ViewSprite: 5385
+},
+{
+	Id: 5386
+	AegisName: "GlassShards"
+	Name: "GlassShards"
+	Type: "IT_ETC"
+	Buy: 10
+	Sell: 5
+	Weight: 5
+	Refine: false
+	ViewSprite: 5386
+},
+{
+	Id: 5387
+	AegisName: "Hay"
+	Name: "Hay"
+	Type: "IT_ETC"
+	Buy: 200
+	Sell: 100
+	Weight: 11
+	Refine: false
+	ViewSprite: 5387
+},
+{
+	Id: 5388
+	AegisName: "Straw"
+	Name: "Straw"
+	Type: "IT_ETC"
+	Buy: 200
+	Sell: 100
+	Weight: 11
+	Refine: false
+	ViewSprite: 5388
+},
+{
+	Id: 5389
+	AegisName: "SpeltSeeds"
+	Name: "SpeltSeeds"
+	Type: "IT_ETC"
+	Buy: 200
+	Sell: 100
+	Weight: 8
+	Refine: false
+	ViewSprite: 5389
+},
+{
+	Id: 5390
+	AegisName: "MoonDust"
+	Name: "MoonDust"
+	Type: "IT_ETC"
+	Buy: 2000
+	Sell: 1000
+	Weight: 1
+	Refine: false
+	ViewSprite: 5390
+},
+{
+	Id: 5391
+	AegisName: "SunDust"
+	Name: "SunDust"
+	Type: "IT_ETC"
+	Buy: 2000
+	Sell: 1000
+	Weight: 1
+	Refine: false
+	ViewSprite: 5391
 },
 /* Chest Armor */
 {
@@ -14474,6 +14544,24 @@ item_db: (
 	ViewSprite: 5326
 	Script: <"
 		bonus bMatkRate, -36; // @EVOL2
+	">
+},
+{
+	Id: 5392
+	AegisName: "SunshroomHat"
+	Name: "SunshroomHat"
+	Type: "IT_ARMOR"
+	Buy: 3000
+	Sell: 1500
+	Weight: 30
+	Matk: 5
+	Def: 15
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5392
+	Script: <"
+		bonus bMatkRate, 5; // @EVOL2
 	">
 },
 /* Usable items */
