--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -3146,6 +3146,7 @@ mob_db: (
 	Drops: {
 		SmallMushroom: 500
 		InsectLeg: 500
+		MoonDust: 400
 		SulphurPowder: 400
 		Lifestone: 300
 		EmptyBottle: 100
@@ -10444,6 +10445,228 @@ mob_db: (
 		Coal: 500
 		IronOre: 500
 		IronPowder: 1200
+	}
+},
+{
+	Id: 1227
+	SpriteName: "Grass"
+	Name: "Grass"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Hay: 5000
+		GrassSeed: 2000
+	}
+},
+{
+	Id: 1228
+	SpriteName: "Spelt"
+	Name: "Spelt"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		Straw: 5000
+		SpeltSeeds: 2000
+	}
+},
+{
+	Id: 1229
+	SpriteName: "WarlordSkull"
+	Name: "Warlord Skull"
+	Lv: 180
+	Hp: 6000
+	Sp: 0
+	Exp: 6808
+	JExp: 821
+	AttackRange: 2
+	Attack: [85, 185]
+	Def: 45
+	Mdef: 25
+	CriticalDef: 0
+	Stats: {
+		Str: 50
+		Agi: 20
+		Vit: 40
+		Int: 30
+		Dex: 30
+		Luk: 70
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		Aggressive: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 650
+	AttackDelay: 1700
+	AttackMotion: 702
+	DamageMotion: 580
+	MutationCount: 4
+	MutationStrength: 30
+	Drops: {
+		DarkCrystal: 1000
+		Skull: 500
+		GoldenTooth: 20
+		WarlordHelmet: (3, "ODG_BASICSTAT")
+		SkullMask: (1, "ODG_BASICSTAT")
+	}
+},
+{
+	Id: 1230
+	SpriteName: "GoldenSkull"
+	Name: "Golden Skull"
+	Lv: 180
+	Hp: 8000
+	Sp: 0
+	Exp: 8595
+	JExp: 857
+	AttackRange: 2
+	Attack: [85, 410]
+	Def: 50
+	Mdef: 25
+	CriticalDef: 0
+	Stats: {
+		Str: 45
+		Agi: 25
+		Vit: 35
+		Int: 30
+		Dex: 35
+		Luk: 55
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Aggressive: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 650
+	AttackDelay: 1650
+	AttackMotion: 682
+	DamageMotion: 490
+	MutationCount: 3
+	MutationStrength: 30
+	Drops: {
+		GoldenTooth: 50
+		GoldenTooth: 50
+		GoldenDeliciousApple: 22
+		GoldIngot: 1
+	}
+},
+{
+	Id: 1231
+	SpriteName: "Sunshroom"
+	Name: "Sunshroom"
+	Lv: 120
+	Hp: 650
+	Sp: 0
+	Exp: 324
+	JExp: 55
+	AttackRange: 4
+	Attack: [90, 110]
+	Def: 12
+	Mdef: 12
+	CriticalDef: 0
+	Stats: {
+		Str: 20
+		Agi: 22
+		Vit: 20
+		Int: 15
+		Dex: 40
+		Luk: 20
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	Mode: {
+		CanMove: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 700
+	AttackDelay: 1500
+	AttackMotion: 572
+	DamageMotion: 380
+	MutationCount: 2
+	MutationStrength: 50
+	Drops: {
+		SmallMushroom: 500
+		InsectLeg: 500
+		SunDust: 400
+		Lifestone: 300
+		EmptyBottle: 100
+		Fungus: 30
+		MushroomSpores: 100
+		JoyplimScroll: 50
+		SunshroomHat: (1, "ODG_BASICSTAT")
 	}
 },
 )
