Mobs and items Stalker Horn

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -4929,16 +4929,15 @@ item_db: (
 },
 {
 	Id: 5116
-	AegisName: "WraithHorn"
-	Name: "WraithHorn"
+	AegisName: "StalkerHorn"
+	Name: "StalkerHorn"
 	Type: "IT_ETC"
-	Buy: 700
-	Sell: 20
+	Buy: 2000
+	Sell: 1000
 	Weight: 10
 	Def: 0
 	Refine: false
 	ViewSprite: 5116
-	//Disabled: true // @TMWA
 },
 {
 	Id: 5117
