Added 5 and 10 % crit def to golden plates, respectively

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -6033,7 +6033,7 @@ item_db: (
 	AegisName: "GoldenPlatemail"
 	Name: "GoldenPlatemail"
 	Type: "IT_ARMOR"
-	Buy: 9999000
+	Buy: 350000
 	Sell: 3000
 	Weight: 4500
 	Matk: -100
@@ -6044,6 +6044,7 @@ item_db: (
 	ViewSprite: 645
 	Script: <"
 		bonus bMatkRate, -100; // @EVOL2
+		bonus bCriticalDef, 5;
 	">
 },
 {
@@ -6176,6 +6177,7 @@ item_db: (
 	ViewSprite: 659
 	Script: <"
 		bonus bMatkRate, -110; // @EVOL2
+		bonus bCriticalDef, 10;
 	">
 },
 {
