Next-Gen teleports system and Gate Building Toolkit for TMW
Its attempt to get best of @addwarp, GM Island teleport and Illia
teleports - making visually OKish teleports with desirable properties.

On user visible side this allows to open nice looking teleports into
arbitrary destinations, that do FX effect upon player stepping on them.

But its more.

* New teleports can be instatiated as needed, running side by side.
* Teleports can have finite lifetime, disappearing themself.
* Teleports can be removed, leaving no side effects.
* No leftovers or side effects after teleport removed.
* There's way to "globally" track all "tracked" teleports.
* Up to 100 "tracked" teleports can coexist - and this list can
    be displayed or managed.

* Flexible condition check based on cookie. If some gate got cookie set
    then it only lets players with matching variable to pass.
* Aspects like timeout, FX and their timing, etc can be customized.
  (for safety reasons @teleportadd allows only few NPC sprites and few params)
* Teleports meant to be registered in TeleportManager. However, its
    possible to create "unmanaged" teleports (e.g. for spells).
* In future it can allow custom hooks/checks on teleporters (planned)
* Attempts to reasonably validate input and refuses to do apparently
    invalid things like landing on collisions or bad map/coordinates.
* Builtin help.

Overall it meant to
* Play events with better FX effects on arbitrary maps, including
     e.g. chaining inaccessible ones.
* Keep track of all open "managed" gateways - being able to manage
     all established wormholes.
* Reusable component (function) doing teleport setup - and overall quite
     configurable thing via NPC vars, reusable from e.g. spells or
     various quests. So quest or spell can open e.g. transient reasonably
     looking self-destroying teleport easily, etc (these are not
     tracked and would not appear in @teleportlist but can in principle
     be force-closed via @teleportdel if c

--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -36,6 +36,7 @@ npc: npc/functions/motdconfig.txt
 npc: npc/functions/ghost.txt
 npc: npc/functions/vault.txt
 npc: npc/functions/global_event_handler.txt
+npc: npc/functions/teleport_manager.txt
 
 // Item Functions
 npc: npc/items/purification_potion.txt
