Mobs and Items disable items for now

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -3147,7 +3147,6 @@ mob_db: (
 	Drops: {
 		SmallMushroom: 500
 		InsectLeg: 500
-		MoonDust: 400
 		SulphurPowder: 400
 		Lifestone: 300
 		EmptyBottle: 100
@@ -10661,7 +10660,7 @@ mob_db: (
 	Drops: {
 		SmallMushroom: 500
 		InsectLeg: 500
-		SunDust: 400
+		SulphurPowder: 400
 		Lifestone: 300
 		EmptyBottle: 100
 		Fungus: 30
