--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -14564,6 +14564,42 @@ item_db: (
 		bonus bMatkRate, 5; // @EVOL2
 	">
 },
+{
+	Id: 5394
+	AegisName: "BlackKnightsHelmet"
+	Name: "BlackKnightsHelmet"
+	Type: "IT_ARMOR"
+	Buy: 20000
+	Sell: 2000
+	Weight: 600
+	Matk: -30
+	Def: 15
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5394
+	Script: <"
+		bonus bMatkRate, -30; // @EVOL2
+	">
+},
+{
+	Id: 5395
+	AegisName: "BlackRoseHat"
+	Name: "BlackRoseHat"
+	Type: "IT_ARMOR"
+	Buy: 5000
+	Sell: 1000
+	Weight: 0
+	Matk: 8
+	Def: 1
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5395
+	Script: <"
+		bonus bMatkRate, 8; // @EVOL2
+	">
+},
 /* Usable items */
 {
 	Id: 501
@@ -18266,6 +18302,24 @@ item_db: (
 	Loc: "EQP_HAND_L"
 	Refine: false
 	ViewSprite: 5285
+	Script: <"
+		bonus bMatkRate, -200; // @EVOL2
+	">
+},
+{
+	Id: 5393
+	AegisName: "BlackSteelShield"
+	Name: "BlackSteelShield"
+	Type: "IT_ARMOR"
+	Buy: 40000
+	Sell: 3000
+	Weight: 2500
+	Matk: -200
+	Def: 20
+	Slots: 0
+	Loc: "EQP_HAND_L"
+	Refine: false
+	ViewSprite: 5393
 	Script: <"
 		bonus bMatkRate, -200; // @EVOL2
 	">
