mobs and items 20241210
- added Snowshroom
- added Blue/Green/Red/Yellow- Super slimes (drops are only normal drops of the small version and maybe must be edited and they are not added to the splitting logic since thats not merged yet)
- added SnowshroomHat
- added WickedMushroomHat and made it a drop of Wicked Mushrooms
- enabled GoldIngot since its a drop of the GoldenSkull now

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5494,7 +5494,6 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	}
-	//Disabled: true // @TMWA
 },
 {
 	Id: 5316
@@ -14599,6 +14598,39 @@ item_db: (
 	Script: <"
 		bonus bMatkRate, 8; // @EVOL2
 	">
+},
+{
+	Id: 5396
+	AegisName: "SnowshroomHat"
+	Name: "SnowshroomHat"
+	Type: "IT_ARMOR"
+	Buy: 3000
+	Sell: 1500
+	Weight: 30
+	Matk: 5
+	Def: 15
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5396
+	Script: <"
+		bonus bMatkRate, 5; // @EVOL2
+	">
+},
+{
+	Id: 5397
+	AegisName: "WickedMushroomHat"
+	Name: "WickedMushroomHat"
+	Type: "IT_ARMOR"
+	Buy: 2500
+	Sell: 1250
+	Weight: 30
+	Matk: 0
+	Def: 15
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5396
 },
 /* Usable items */
 {
