--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -2590,6 +2590,7 @@ mob_db: (
 		Fungus: 30
 		MushroomSpores: 100
 		JoyplimScroll: 40
+		WickedMushroomHat: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -10667,6 +10668,268 @@ mob_db: (
 		MushroomSpores: 100
 		JoyplimScroll: 50
 		SunshroomHat: (1, "ODG_BASICSTAT")
+	}
+},
+{
+	Id: 1232
+	SpriteName: "Snowshroom"
+	Name: "Snowshroom"
+	Lv: 120
+	Hp: 650
+	Sp: 0
+	Exp: 324
+	JExp: 55
+	AttackRange: 4
+	Attack: [90, 110]
+	Def: 12
+	Mdef: 12
+	CriticalDef: 0
+	Stats: {
+		Str: 20
+		Agi: 22
+		Vit: 20
+		Int: 15
+		Dex: 40
+		Luk: 20
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	Mode: {
+		CanMove: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 700
+	AttackDelay: 1500
+	AttackMotion: 572
+	DamageMotion: 380
+	MutationCount: 2
+	MutationStrength: 50
+	Drops: {
+		SmallMushroom: 500
+		InsectLeg: 500
+		SulphurPowder: 400
+		Lifestone: 300
+		EmptyBottle: 100
+		Fungus: 30
+		MushroomSpores: 100
+		JoyplimScroll: 50
+		SnowshroomHat: (1, "ODG_BASICSTAT")
+	}
+},
+{
+	Id: 1233
+	SpriteName: "YellowSuperSlime"
+	Name: "Yellow Super Slime"
+	Lv: 125
+	Hp: 25000
+	Sp: 0
+	Exp: 12000
+	JExp: 1600
+	AttackRange: 2
+	Attack: [160, 165]
+	Def: 44
+	Mdef: 28
+	CriticalDef: 10
+	Stats: {
+		Str: 50
+		Agi: 8
+		Vit: 50
+		Int: 1
+		Dex: 25
+		Luk: 1
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		Boss: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1400
+	AttackDelay: 1800
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 20
+	Drops: {
+		YellowApple: 750
+		OrangeCupcake: 200
+		CherryCake: 100
+		CactusDrink: 350
+		CactusPotion: 250
+		SharpKnife: 10
+		IronOre: 450
+		Topaz: 20
+		Coal: 450
+	}
+},
+{
+	Id: 1234
+	SpriteName: "RedSuperSlime"
+	Name: "Red Super Slime"
+	Lv: 130
+	Hp: 30000
+	Sp: 0
+	Exp: 14000
+	JExp: 1800
+	AttackRange: 2
+	Attack: [170, 175]
+	Def: 55
+	Mdef: 38
+	CriticalDef: 10
+	Stats: {
+		Str: 60
+		Agi: 8
+		Vit: 55
+		Int: 1
+		Dex: 25
+		Luk: 1
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		Boss: true
+		Aggressive: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1300
+	AttackDelay: 1500
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 2
+	MutationStrength: 20
+	Drops: {
+		Knife: 300
+		ChocolateBar: 110
+		Dagger: 200
+		Ruby: 20
+		MinersHat: (80, "ODG_BASICSTAT")
+		RedApple: 750
+		Boots: (250, "ODG_BASICSTAT")
+		MinerGloves: (150, "ODG_BASICSTAT")
+	}
+},
+{
+	Id: 1235
+	SpriteName: "GreenSuperSlime"
+	Name: "Green Super Slime"
+	Lv: 135
+	Hp: 35000
+	Sp: 0
+	Exp: 16000
+	JExp: 2000
+	AttackRange: 2
+	Attack: [180, 185]
+	Def: 66
+	Mdef: 48
+	CriticalDef: 10
+	Stats: {
+		Str: 70
+		Agi: 8
+		Vit: 60
+		Int: 1
+		Dex: 25
+		Luk: 1
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		Aggressive: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1200
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 20
+	Drops: {
+		CactusPotion: 200
+		Emerald: 20
+		CactusDrink: 100
+		Dagger: 250
+		SharpKnife: 200
+		CoinBag: 500
+		CasinoCoins: 500
+		GreenApple: 750
+	}
+},
+{
+	Id: 1236
+	SpriteName: "BlueSuperSlime"
+	Name: "Blue Super Slime"
+	Lv: 140
+	Hp: 40000
+	Sp: 0
+	Exp: 18000
+	JExp: 2200
+	AttackRange: 2
+	Attack: [190, 195]
+	Def: 77
+	Mdef: 58
+	CriticalDef: 10
+	Stats: {
+		Str: 80
+		Agi: 8
+		Vit: 65
+		Int: 1
+		Dex: 50
+		Luk: 1
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 3)
+	Mode: {
+		CanMove: true
+		Looter: true
+		Boss: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1200
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 20
+	Drops: {
+		IceCube: 200
+		Sapphire: 20
+		CactusDrink: 500
+		IcedWater: 700
+		SilverMirror: 50
+		BookPage: 500
+		Snowflake: 100
 	}
 },
 )
