--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -6607,8 +6607,8 @@ item_db: (
 	AegisName: "CottonShirt"
 	Name: "CottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 13
 	Matk: -2
 	Def: 2
@@ -6625,8 +6625,8 @@ item_db: (
 	AegisName: "RedCottonShirt"
 	Name: "RedCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -6643,8 +6643,8 @@ item_db: (
 	AegisName: "GreenCottonShirt"
 	Name: "GreenCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -6661,8 +6661,8 @@ item_db: (
 	AegisName: "DarkBlueCottonShirt"
 	Name: "DarkBlueCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -6679,8 +6679,8 @@ item_db: (
 	AegisName: "YellowCottonShirt"
 	Name: "YellowCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -6697,8 +6697,8 @@ item_db: (
 	AegisName: "LightBlueCottonShirt"
 	Name: "LightBlueCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -6715,8 +6715,8 @@ item_db: (
 	AegisName: "PinkCottonShirt"
 	Name: "PinkCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -6733,8 +6733,8 @@ item_db: (
 	AegisName: "BlackCottonShirt"
 	Name: "BlackCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -6751,8 +6751,8 @@ item_db: (
 	AegisName: "OrangeCottonShirt"
 	Name: "OrangeCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -6769,8 +6769,8 @@ item_db: (
 	AegisName: "PurpleCottonShirt"
 	Name: "PurpleCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -6787,8 +6787,8 @@ item_db: (
 	AegisName: "DarkGreenCottonShirt"
 	Name: "DarkGreenCottonShirt"
 	Type: "IT_ARMOR"
-	Buy: 300
-	Sell: 5
+	Buy: 1000
+	Sell: 500
 	Weight: 20
 	Matk: -4
 	Def: 2
@@ -10596,6 +10596,24 @@ item_db: (
 	ViewSprite: 5322
 	Script: <"
 		bonus bMatkRate, -170; // @EVOL2
+	">
+},
+{
+	Id: 5398
+	AegisName: "RaggedShirt"
+	Name: "RaggedShirt"
+	Type: "IT_ARMOR"
+	Buy: 300
+	Sell: 5
+	Weight: 7
+	Matk: -1
+	Def: 1
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5398
+	Script: <"
+		bonus bMatkRate, -1; // @EVOL2
 	">
 },
 //////////////////////////////////////////////////////////
