mobs and drops 20241216
- added IceSkullMasK and assiged it to IceSkull
- added GoldenSkullMasK and assigned it to GoldenSkull
- added YellowHeadSlime and assigned it to YellowSuperSlime
- added RedHeadSlime and assigned it to RedSuperSlime
- added GreenHeadSlime and assigned it to GreenSuperSlime
- added BlueHeadSlime and assigned it to BlueSuperSlime
- changed SuperSlime stats a bit gave them more range and made them slower (attack+move) and set luck

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -14650,6 +14650,122 @@ item_db: (
 	Refine: false
 	ViewSprite: 5396
 },
+{
+	Id: 5399
+	AegisName: "IceSkullMask"
+	Name: "IceSkullMask"
+	Type: "IT_ARMOR"
+	Buy: 10000
+	Sell: 5000
+	Weight: 150
+	Matk: 5
+	Def: 3
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5399
+	Script: <"
+		bonus bMatkRate, 5; // @EVOL2
+	">
+},
+{
+	Id: 5400
+	AegisName: "GoldenSkullMask"
+	Name: "GoldenSkullMask"
+	Type: "IT_ARMOR"
+	Buy: 10000
+	Sell: 5000
+	Weight: 150
+	Matk: 5
+	Def: 3
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5400
+	Script: <"
+		bonus bMatkRate, 5; // @EVOL2
+	">
+},
+{
+	Id: 5401
+	AegisName: "YellowHeadSlime"
+	Name: "YellowHeadSlime"
+	Type: "IT_ARMOR"
+	Buy: 10000
+	Sell: 5000
+	Weight: 250
+	Matk: 0
+	Def: 1
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5401
+	Script: <"
+		bonus bHPrecovRate, 7;
+		bonus bMdef, 7;
+		bonus bHit, -7;
+	">
+},
+{
+	Id: 5402
+	AegisName: "RedHeadSlime"
+	Name: "RedHeadSlime"
+	Type: "IT_ARMOR"
+	Buy: 10000
+	Sell: 5000
+	Weight: 250
+	Matk: 0
+	Def: 1
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5402
+	Script: <"
+		bonus bHPrecovRate, 7;
+		bonus bMdef, 7;
+		bonus bHit, -7;
+	">
+},
+{
+	Id: 5403
+	AegisName: "GreenHeadSlime"
+	Name: "GreenHeadSlime"
+	Type: "IT_ARMOR"
+	Buy: 10000
+	Sell: 5000
+	Weight: 250
+	Matk: 0
+	Def: 1
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5403
+	Script: <"
+		bonus bHPrecovRate, 7;
+		bonus bMdef, 7;
+		bonus bHit, -7;
+	">
+},
+{
+	Id: 5404
+	AegisName: "BlueHeadSlime"
+	Name: "BlueHeadSlime"
+	Type: "IT_ARMOR"
+	Buy: 10000
+	Sell: 5000
+	Weight: 250
+	Matk: 0
+	Def: 1
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5404
+	Script: <"
+		bonus bHPrecovRate, 7;
+		bonus bMdef, 7;
+		bonus bHit, -7;
+	">
+},
 /* Usable items */
 {
 	Id: 501
