--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -2451,6 +2451,7 @@ mob_db: (
 		IceCube: 5000
 		IcedWater: 800
 		Snowflake: 1000
+		IceSkullMask: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -7992,7 +7993,7 @@ mob_db: (
 		Boots: 5000
 		LeatherGloves: 200
 		CrazyRum: 500
-                LongSword: (1, "ODG_BASICSTAT")
+		LongSword: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -10615,7 +10616,7 @@ mob_db: (
 		GoldenTooth: 50
 		GoldenTooth: 50
 		GoldenDeliciousApple: 22
-		GoldIngot: 1
+		GoldenSkullMask: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -10731,7 +10732,7 @@ mob_db: (
 	Sp: 0
 	Exp: 12000
 	JExp: 1600
-	AttackRange: 2
+	AttackRange: 3
 	Attack: [160, 165]
 	Def: 44
 	Mdef: 28
@@ -10742,7 +10743,7 @@ mob_db: (
 		Vit: 50
 		Int: 1
 		Dex: 25
-		Luk: 1
+		Luk: 70
 	}
 	ViewRange: 9
 	ChaseRange: 10
@@ -10751,14 +10752,13 @@ mob_db: (
 	Element: (1, 1)
 	Mode: {
 		CanMove: true
-		Looter: true
 		Boss: true
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
 	}
-	MoveSpeed: 1400
-	AttackDelay: 1800
+	MoveSpeed: 1600
+	AttackDelay: 2000
 	AttackMotion: 672
 	DamageMotion: 480
 	MutationCount: 1
@@ -10773,6 +10773,7 @@ mob_db: (
 		IronOre: 450
 		Topaz: 20
 		Coal: 450
+		YellowHeadSlime: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -10784,7 +10785,7 @@ mob_db: (
 	Sp: 0
 	Exp: 14000
 	JExp: 1800
-	AttackRange: 2
+	AttackRange: 3
 	Attack: [170, 175]
 	Def: 55
 	Mdef: 38
@@ -10795,7 +10796,7 @@ mob_db: (
 		Vit: 55
 		Int: 1
 		Dex: 25
-		Luk: 1
+		Luk: 75
 	}
 	ViewRange: 9
 	ChaseRange: 10
@@ -10804,15 +10805,13 @@ mob_db: (
 	Element: (1, 1)
 	Mode: {
 		CanMove: true
-		Looter: true
 		Boss: true
-		Aggressive: true
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
 	}
-	MoveSpeed: 1300
-	AttackDelay: 1500
+	MoveSpeed: 1500
+	AttackDelay: 1700
 	AttackMotion: 672
 	DamageMotion: 480
 	MutationCount: 2
@@ -10826,6 +10825,7 @@ mob_db: (
 		RedApple: 750
 		Boots: (250, "ODG_BASICSTAT")
 		MinerGloves: (150, "ODG_BASICSTAT")
+		RedHeadSlime: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -10837,7 +10837,7 @@ mob_db: (
 	Sp: 0
 	Exp: 16000
 	JExp: 2000
-	AttackRange: 2
+	AttackRange: 3
 	Attack: [180, 185]
 	Def: 66
 	Mdef: 48
@@ -10848,7 +10848,7 @@ mob_db: (
 		Vit: 60
 		Int: 1
 		Dex: 25
-		Luk: 1
+		Luk: 80
 	}
 	ViewRange: 9
 	ChaseRange: 10
@@ -10857,15 +10857,13 @@ mob_db: (
 	Element: (1, 1)
 	Mode: {
 		CanMove: true
-		Looter: true
-		Aggressive: true
-		Assist: true
+		Boss: true
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
 	}
-	MoveSpeed: 1200
-	AttackDelay: 1872
+	MoveSpeed: 1400
+	AttackDelay: 2072
 	AttackMotion: 672
 	DamageMotion: 480
 	MutationCount: 1
@@ -10879,6 +10877,7 @@ mob_db: (
 		CoinBag: 500
 		CasinoCoins: 500
 		GreenApple: 750
+		GreenHeadSlime: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -10890,7 +10889,7 @@ mob_db: (
 	Sp: 0
 	Exp: 18000
 	JExp: 2200
-	AttackRange: 2
+	AttackRange: 3
 	Attack: [190, 195]
 	Def: 77
 	Mdef: 58
@@ -10901,7 +10900,7 @@ mob_db: (
 		Vit: 65
 		Int: 1
 		Dex: 50
-		Luk: 1
+		Luk: 85
 	}
 	ViewRange: 9
 	ChaseRange: 10
@@ -10910,14 +10909,13 @@ mob_db: (
 	Element: (1, 3)
 	Mode: {
 		CanMove: true
-		Looter: true
 		Boss: true
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
 	}
-	MoveSpeed: 1200
-	AttackDelay: 1872
+	MoveSpeed: 1400
+	AttackDelay: 2072
 	AttackMotion: 672
 	DamageMotion: 480
 	MutationCount: 1
@@ -10930,6 +10928,7 @@ mob_db: (
 		SilverMirror: 50
 		BookPage: 500
 		Snowflake: 100
+		BlueHeadSlime: (1, "ODG_BASICSTAT")
 	}
 },
 )
