Stop preventing fast character switching. So annoying, especially when it's default on test servers!
This might conflict with whatever config on live servers, depending on how it's applied.

--- a/world/map/conf/battle_athena.conf
+++ b/world/map/conf/battle_athena.conf
@@ -207,7 +207,7 @@ player_attack_direction_change: yes
 monster_attack_direction_change: yes
 
 // Stop logout for 10 seconds after a hit? (Note 1)
-prevent_logout: yes
+prevent_logout: no
 
 // If skill fails by delay, should it display or not.  (Note 1)
 display_delay_skill_fail: yes
