Imperial Helmet added. Bull nerfed.

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -11572,10 +11572,10 @@ item_db: (
 		bonus bMatkRate, -52; // @EVOL2
 		bonus bDoubleAddRate, 20;
 		bonus bStr, 10;
-		bonus bCritical, 15;
+		bonus bCritical, 8;
 		bonus bAspdRate, 10;
 		bonus bDef2Rate, -39;
-		bonus bHit, -15;
+		bonus bHit, -10;
 	">
 },
 {
@@ -11865,6 +11865,36 @@ item_db: (
 	Loc: "EQP_HEAD_TOP"
 	Refine: false
 	ViewSprite: 905
+},
+{
+	Id: 911
+	AegisName: "ImperialHelmet"
+	Name: "ImperialHelmet"
+	Type: "IT_ARMOR"
+	Buy: 90000
+	Sell: 45000
+	Weight: 1300
+	Matk: -52
+	Def: 25
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	EquipLv: 90
+	Refine: false
+	ViewSprite: 911
+	OnEquipScript: <"
+		callfunc "RequireStat", bStr, 70, EQI_HEAD_TOP;
+		callfunc "RequireStat", bVit, 50, EQI_HEAD_TOP;
+		callfunc "RequireStat", bLuk, 50, EQI_HEAD_TOP;
+	">
+	Script: <"
+		bonus bMatkRate, -52; // @EVOL2
+		bonus bPerfectHitRate, 5;
+		bonus bDoubleAddRate, 5;
+		bonus bStr, 5;
+		bonus bCriticalDef 5;
+		bonus bMdef, 5;
+		bonus bAspdRate, 5;
+	">
 },
 {
 	Id: 1173
