Adjust Warlord Plate & Helmet and Leather Gloves drop rates
This is a conspiracy by Small Nerf!

j/k; the armors and helmets are dropping way too often and so nobody
crafts them. The gloves I have 50 in my storage, but they are only
nerfed down to 1:2000 as they're uncraftable otherwise.

There has been a Warlord Plate listed @ ManaMarket for weeks now at 150k gp
and nobody is purchasing it. This price barely covers the price of making
the required ingots and what Nicholas's apprentice charges to make the armor.

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -1905,11 +1905,12 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 30
 	Drops: {
-		LeatherGloves: (20, "ODG_BASICSTAT")
 		SnakeSkin: 350
 		MountainSnakeEgg: 400
 		MountainSnakeEgg: 400
 		MountainSnakeTongue: 500
+		MinerGloves: (100, "ODG_BASICSTAT")
+		LeatherGloves: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -2103,9 +2104,9 @@ mob_db: (
 		Bone: 210
 		Skull: 300
 		DarkCrystal: 1000
-		WarlordHelmet: (3, "ODG_BASICSTAT")
-		WarlordPlate: (2, "ODG_BASICSTAT")
-		LeatherGloves: (35, "ODG_BASICSTAT")
+		WarlordHelmet: (1, "ODG_BASICSTAT")
+		WarlordPlate: (1, "ODG_BASICSTAT")
+		LeatherGloves: (5, "ODG_BASICSTAT")
 		DiseasedHeart: 500
 		Soul: 500
 		GoldenTooth: 10
@@ -3044,9 +3045,9 @@ mob_db: (
 		UnderworldMask: 5
 		Skull: 300
 		DarkCrystal: 1000
-		WarlordHelmet: (3, "ODG_BASICSTAT")
-		WarlordPlate: (2, "ODG_BASICSTAT")
-		LeatherGloves: (35, "ODG_BASICSTAT")
+		WarlordHelmet: (1, "ODG_BASICSTAT")
+		WarlordPlate: (1, "ODG_BASICSTAT")
+		LeatherGloves: (5, "ODG_BASICSTAT")
 		DiseasedHeart: 500
 		Soul: 500
 	}
@@ -3098,9 +3099,9 @@ mob_db: (
 		Phylactery: 5
 		Skull: 300
 		DarkCrystal: 1000
-		WarlordHelmet: (3, "ODG_BASICSTAT")
-		WarlordPlate: (2, "ODG_BASICSTAT")
-		LeatherGloves: (35, "ODG_BASICSTAT")
+		WarlordHelmet: (1, "ODG_BASICSTAT")
+		WarlordPlate: (1, "ODG_BASICSTAT")
+		LeatherGloves: (5, "ODG_BASICSTAT")
 		DiseasedHeart: 500
 		Soul: 500
 	}
@@ -4220,11 +4221,12 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 30
 	Drops: {
-		LeatherGloves: (20, "ODG_BASICSTAT")
 		SnakeSkin: 350
 		MountainSnakeEgg: 400
 		MountainSnakeEgg: 400
 		MountainSnakeTongue: 500
+		MinerGloves: (100, "ODG_BASICSTAT")
+		LeatherGloves: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -4369,9 +4371,9 @@ mob_db: (
 		UndeadEye: 210
 		PurpleDye: 200
 		DarkCrystal: 1000
-		WarlordHelmet: (3, "ODG_BASICSTAT")
-		WarlordPlate: (2, "ODG_BASICSTAT")
-		LeatherGloves: (35, "ODG_BASICSTAT")
+		WarlordHelmet: (1, "ODG_BASICSTAT")
+		WarlordPlate: (1, "ODG_BASICSTAT")
+		LeatherGloves: (5, "ODG_BASICSTAT")
 		DiseasedHeart: 500
 		Soul: 500
 	}
@@ -10561,7 +10563,7 @@ mob_db: (
 		DarkCrystal: 1000
 		Skull: 500
 		GoldenTooth: 20
-		WarlordHelmet: (3, "ODG_BASICSTAT")
+		WarlordHelmet: (1, "ODG_BASICSTAT")
 		SkullMask: (1, "ODG_BASICSTAT")
 	}
 },
