Added Pirate Bandana as a rare drop to Swashbucklers

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -10705,6 +10705,20 @@ item_db: (
 	">
 },
 {
+	Id: 604
+	AegisName: "PirateBandana"
+	Name: "PirateBandana"
+	Type: "IT_ARMOR"
+	Buy: 10000
+	Sell: 5000
+	Weight: 20
+	Def: 3
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 604
+},
+{
 	Id: 615
 	AegisName: "PumpkinHelmet"
 	Name: "PumpkinHelmet"
