--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -2745,6 +2745,7 @@ mob_db: (
 		PileOfAsh: 500
 		Pearl: 250
 		Bandana: (500, "ODG_BASICSTAT")
+		PirateBandana: (10, "ODG_BASICSTAT")
 	}
 },
 {
