Legendary Shovel and Legendary Treasure Map
- added the legendary shovel as an event item
- added legendary treasure map as an event item
- added some missing ViewSprite entrys
- fixed some misplaced brackets

Approved-by: Hello TMW <hello@themanaworld.org>
Reviewed-by: Hello TMW <hello@themanaworld.org>

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -16630,6 +16630,7 @@ item_db: (
 	Sell: 750
 	Weight: 210
 	Refine: false
+	ViewSprite: 5329
 	KeepAfterUse: true
 	Script: <"
 		if (@useType == 1) { //@EVOL2
@@ -16648,6 +16649,7 @@ item_db: (
 	Buy: 5000
 	Sell: 1000
 	Weight: 7
+	ViewSprite: 5330
 	Script: <"
 		callfunc "learnskill", SKILL_MODRISHA; // @EVOL2
 		@skillId = SKILL_MODRISHA; // @EVOL2
@@ -16940,11 +16942,11 @@ item_db: (
 		nomail: true
 		noauction: true
 		noselltonpc: true
+	}
 	Script: <"
 		set @MapName$, "PirateTreasureMap";
 		callfunc "readMap";
 	">
-	}
 },
 {
 	Id: 5352
@@ -16964,11 +16966,11 @@ item_db: (
 		nomail: true
 		noauction: true
 		noselltonpc: true
+	}
 	Script: <"
 		set @MapName$, "DungeonMap";
 		callfunc "readMap";
 	">
-	}
 },
 {
 	Id: 5353
@@ -16988,11 +16990,11 @@ item_db: (
 		nomail: true
 		noauction: true
 		noselltonpc: true
+	}
 	Script: <"
 		set @MapName$, "TreasureMap";
 		callfunc "readMap";
 	">
-	}
 },
 {
 	Id: 5354
@@ -17083,11 +17085,11 @@ item_db: (
 		nomail: true
 		noauction: true
 		noselltonpc: true
+	}
 	Script: <"
 		set @StoneName$, "AnchorStone";
 		callfunc "useAnchorStone";
 	">
-	}
 },
 {
 	Id: 5383
@@ -17109,11 +17111,68 @@ item_db: (
 		noselltonpc: true
 		nostorage: true
 		nogstorage: true
+	}
 	Script: <"
 		set @StoneName$, "AnchoredAnchorStone";
 		callfunc "useAnchorStone";
 	">
+},
+{
+	Id: 5405
+	AegisName: "LegendaryShovel"
+	Name: "Legendary Shovel"
+	Type: "IT_USABLE"
+	Buy: 0
+	Sell: 0
+	Weight: 210
+	Refine: false
+	ViewSprite: 5405
+	KeepAfterUse: true
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+		nostorage: false
+		nogstorage: false
 	}
+	Script: <"
+		if (@useType == 1) { //@EVOL2
+			doevent "Shovel::OnBury"; //@EVOL2
+		} else { //@EVOL2
+			doevent "Shovel::OnDig"; //@EVOL2
+		} //@EVOL2
+		//set @ShovelName$, "LegendaryShovel"; // @TMWA
+		//callfunc "useShovel"; // @TMWA
+	">
+},
+{
+	Id: 5406
+	AegisName: "LegendaryTreasureMap"
+	Name: "Legendary Treasure Map"
+	Type: "IT_USABLE"
+	Buy: 0
+	Sell: 0
+	Weight: 14
+	Refine: false
+	ViewSprite: 5406
+	KeepAfterUse: true
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+		nostorage: false
+		nogstorage: false
+	}
+	Script: <"
+		set @MapName$, "LegendaryTreasureMap";
+		callfunc "readMap";
+	">
 },
 /* Legs Armor */
 {
